--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "7.13.10",
     "@babel/node": "7.13.12",
     "@babel/preset-env": "7.13.12",
+    "@sendgrid/mail": "^8.1.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
