--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^3.7.4"
+    "mongodb": "^3.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
